--- a/index.html
+++ b/index.html
@@ -8,15 +8,19 @@
     <title>Lista De Compras</title>
 </head>
 <body>
-    <div id="listaDeCompras">
+    <div id="container">
         <h1>Lista de Compras</h1>
         <input id="inputListaDeCompra" type="text" placeholder="Café">
          <button onclick="listar()" id="alistar" >Listar</button>
          <br>
          <br>
 
-         <div id="compras"></div>
+         <div id="contador"></div>
+         <div id="compras">
 
+         </div>
+
+        
 
     </div>
         <script src="./script.js"></script>
